--- a/ReadEmails/package.json
+++ b/ReadEmails/package.json
@@ -19,6 +19,7 @@
     "imap": "^0.8.19",
     "mailparser": "^3.7.1",
     "mongoose": "^8.6.1",
+    "node-fetch": "^3.3.2",
     "nodemailer": "^6.9.15",
     "nodemon": "^3.1.4"
   }
